--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
   <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
   <link rel="stylesheet" href="css/styles.css">
   
   <!-- Google Fonts -->
@@ -16,7 +17,7 @@
 
 <!-- Font Awesome -->
 
-<script src="https://kit.fontawesome.com/ece8eae9d2.js" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 
 <!-- Bootstrap -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
@@ -73,12 +74,12 @@
 
     <div class="col-lg-6">
       <h1></style> Meet new and interesting dogs nearby.</h1>
-      <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
-      <button type="button" class="btn btn-outline-light btn-lg "><i class="fab fa-google-play"></i> Download</button>
+      <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
     </div>
     
     <div class="col-lg-6">
-      <img src="images/iphone6.png" alt="iphone-mockup">
+      <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
     </div>
 
     </div>
