--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 
 <!-- Bootstrap -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
@@ -90,19 +90,32 @@
 
   <!-- Features -->
 
+<div class="container-fluid">
+  
+<div class="row">
+
+  <div class="col-lg-4">    
   <section id="features">
 
     <h3>Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
+  </div>  
 
+    <div class="col-lg-4">
     <h3>Elite Clientele</h3>
     <p>We have all the dogs, the greatest dogs.</p>
+    </div>
 
+    <div class="col-lg-4">
     <h3>Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
-
+  </div>
   </section>
 
+</div>
+</div>
+
+  
 
   <!-- Testimonials -->
 
