--- a/index.html
+++ b/index.html
@@ -90,23 +90,28 @@
 
   <!-- Features -->
 
-<div class="container-fluid">
+<div class="container-fluid text-center">
   
 <div class="row">
 
   <div class="col-lg-4">    
   <section id="features">
 
+  <i class="fas fa-check-circle text-danger fa-3x"></i>
     <h3>Easy to use.</h3>
     <p>So easy to use, even your dog could do it.</p>
   </div>  
 
     <div class="col-lg-4">
+
+    <i class="fas fa-bullseye text-danger fa-3x"></i>
     <h3>Elite Clientele</h3>
     <p>We have all the dogs, the greatest dogs.</p>
     </div>
 
     <div class="col-lg-4">
+
+    <i class="fas fa-heart text-danger fa-3x"></i>
     <h3>Guaranteed to work.</h3>
     <p>Find the love of your dog's life or your money back.</p>
   </div>
