--- a/index.html
+++ b/index.html
@@ -169,32 +169,60 @@
   <section id="pricing">
 
     <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <p>Simple and affordable price plans for you and your dog.</p>
+      
+        <div class="row">
 
+        <div class="pricing-column col-lg-4 col-md-6">
+          <div class="card">
+        <div class="card-header">
+         <h3>Chihuahua</h3>
+      </div>
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      <div class="card-body">
+        <h2>Free</h2>
+      <p>5 Matches Per Day</p>
+      <p>10 Messages Per Day</p>
+      <p>Unlimited App Usage</p>
+      <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+      </div>
+      </div>
+        </div>
 
+        <div class="pricing-column col-lg-4 col-md-6">
+          <div class="card">
+        <div class="card-header">
+        <h3>Labrador</h3>
+      </div>
 
-    <h3>Labrador</h3>
-    <h2>P2,500 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      <div class="card-body">
+      <h2>P2,500 / mo</h2>
+      <p>Unlimited Matches</p>
+      <p>Unlimited Messages</p>
+      <p>Unlimited App Usage</p>
+      <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+      </div>
+      </div>
+        </div>
 
+        <div class="pricing-column col-lg-4">
+          <div class="card">
+        <div class="card-header">
+         <h3>Mastiff</h3>
+        </div>
+        <div class="card-body">
+        <h2>P5,000 / mo</h2>
+       <p>Pirority Listing</p>
+       <p>Unlimited Matches</p>
+       <p>Unlimited Messages</p>
+       <p>Unlimited App Usage</p>
+       <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+       </div>
+    </div>
+  </div>
+</div>
 
-    <h3>Mastiff</h3>
-    <h2>P5,000 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+     
 
   </section>
 
