--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="row">
 
     <div class="col-lg-6">
-      <h1></style> Meet new and interesting dogs nearby.</h1>
+      <h1>Meet new and interesting dogs nearby.</h1>
       <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
       <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
     </div>
@@ -222,8 +222,6 @@
   </div>
 </div>
 
-     
-
   </section>
 
 
@@ -231,9 +229,12 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+   
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="download-button btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+      <button type="button" class="download-button btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+      </div>
+
 
   </section>
 
@@ -241,6 +242,14 @@
   <!-- Footer -->
 
   <footer id="footer">
+
+ 
+     <i class="social-icon fab fa-twitter"></i>
+      <i class="social-icon fab fa-facebook-f"></i>      
+      <i class="social-icon fab fa-instagram"></i>      
+      <i class="social-icon fas fa-envelope"></i>    
+    </div> 
+    
 
     <p>© Copyright 2020 Jhovanie D. Besana / TinDog</p>
 
